<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/app_logo"
        android:tint="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/login_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@+id/login_app_logo"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"

        />

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login_text"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:hint="Enter Phone Number"
        android:textStyle="bold"
        android:inputType="number"
        android:textColor="@color/colorTextNotEnhanced"
        android:textColorHint="@color/colorTextNotEnhanced"
        android:textAlignment="center"
        android:textCursorDrawable= "@drawable/cursor_color"


        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number_input"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:hint="Password"
        android:textStyle="bold"
        android:textColor="@color/colorTextNotEnhanced"
        android:textColorHint="@color/colorTextNotEnhanced"
        android:textAlignment="center"
        android:textCursorDrawable= "@drawable/cursor_color"
        android:inputType="textPassword"

        />



    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/login_remeber_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorPrimary"
        android:text="Remember Me"
        android:textStyle="bold|italic"
        android:textColor="@color/colorPrimary"
        android:gravity="center_vertical"

        />

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_input"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:padding="5dp"

        android:text="Forget password?"

        android:textAlignment="viewEnd"
        android:textColor="@color/colorPrimary"

        android:textStyle="bold" />

    <Button

        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_solid"
        android:textAllCaps="false"
        android:text="Login"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/white"

        />

    <TextView
        android:id="@+id/login_admin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_login_btn"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="280dp"
        android:layout_marginRight="40dp"
        android:text="Admin Login?"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_not_admin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_login_btn"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="I am a User"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/login_progressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_login_btn"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="100dp"

        android:indeterminateDrawable="@drawable/progress_bar_white"
        android:visibility="invisible" />

</RelativeLayout>
