...
        android:layout_marginRight="20dp"

        />


    <Button
        android:id="@+id/add_new_product"
        android:layout_width="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="30dp"
...
